--- a/CSS/Grid/style.css
+++ b/CSS/Grid/style.css
@@ -27,7 +27,7 @@
     border: 1px solid white;
 }
 
-/* 
+
 .box-1{
     grid-column: 1/2;
     grid-row: 1/2;
@@ -73,7 +73,7 @@
 .box-9{
     grid-column:4/6;
     grid-row: 2/4;
-} */
+}
 
 /* 
 @media screen and (max-width:576px){
